@@ -1,3 +1,12 @@
+2004-01-06  Richard Williamson   <rjw@apple.com>
+
+	Fixed 3521814.  Finalize messages weren't being dispatched!
+
+        Reviewed by John.
+
+        * bindings/jni_jsobject.cpp:
+        (JSObject::invoke):
+
 2004-01-05  Richard Williamson   <rjw@apple.com>
 
 	Added cache of JNI method IDs to minimize allocations.  This mitigates the problem
